--- a/src/global.pcss
+++ b/src/global.pcss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato&display=swap');
 
 @import "tailwindcss/base";
 /* @import "./base.pcss"; */
