--- a/src/global.pcss
+++ b/src/global.pcss
@@ -15,3 +15,23 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+h1 {
+  @apply text-6xl font-normal leading-normal mt-0 mb-2 text-pink-800;
+}
+
+h1 {
+  @apply text-2xl;
+}
+
+h2 {
+  @apply text-xl;
+}
+
+h3 {
+  @apply text-lg;
+}
+
+a {
+  @apply text-blue-600 underline;
+}
