Darken gray text; WIP

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -17,21 +17,14 @@ body {
 }
 
 h1 {
-  @apply text-6xl font-normal leading-normal mt-0 mb-2 text-pink-800;
-}
-
-h1 {
-  @apply text-2xl;
+  @apply text-6xl font-normal leading-normal mt-4 mb-2 text-pink-800 px-8;
+  font-family: Dancing Script, cursive;
 }
 
 h2 {
-  @apply text-xl;
+  @apply text-2xl;
 }
 
 h3 {
-  @apply text-lg;
-}
-
-a {
-  @apply text-blue-600 underline;
+  @apply text-xl;
 }
