--- a/src/global.pcss
+++ b/src/global.pcss
@@ -19,6 +19,7 @@ body {
 h1 {
   @apply text-6xl font-normal leading-normal mt-4 mb-2 text-pink-800 px-8;
   font-family: Dancing Script, cursive;
+  font-weight: bold;
 }
 
 h2 {
