--- a/src/global.pcss
+++ b/src/global.pcss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato&display=swap');
 
-@import "tailwindcss/base";
+@import 'tailwindcss/base';
 /* @import "./base.pcss"; */
 
-@import "tailwindcss/components";
+@import 'tailwindcss/components';
 /* @import "./components.pcss"; */
 
-@import "tailwindcss/utilities";
+@import 'tailwindcss/utilities';
 /* @import "./utilities.pcss"; */
 
 body {
@@ -28,4 +28,16 @@ h2 {
 
 h3 {
   @apply text-xl;
+}
+
+p {
+  @apply m-8;
+}
+
+pre {
+  @apply ml-4 mr-4;
+}
+
+.highlight pre {
+  background-color: #272822;
 }
