--- a/src/global.pcss
+++ b/src/global.pcss
@@ -42,4 +42,21 @@ pre {
   background-color: #272822;
   padding: 10px;
   margin: 10px 0;
+  color: #8b51a3;
+}
+
+code .nt {
+  color: #f92672;
+}
+
+code .nb {
+  color: #f8f8f2;
+}
+
+code .sl {
+  color: #e6db74;
+}
+
+article img {
+  margin: auto;
 }
