--- a/src/global.pcss
+++ b/src/global.pcss
@@ -59,4 +59,13 @@ code .sl {
 
 article img {
   margin: auto;
+  @apply my-16;
+}
+
+article div.highlight {
+  @apply mx-8;
+}
+
+article pre.highlight {
+  @apply px-6 py-2;
 }
